# gnome-bluetooth-3.10.0

./: .gitattributes  .gitignore  ChangeLog  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  configure.scan
applet/: Makefile.am  Makefile.in
docs/: Makefile.in
docs/reference/: Makefile.in
docs/reference/libgnome-bluetooth/: Makefile.in
docs/reference/libgnome-bluetooth/html/: BluetoothChooser.html  BluetoothChooserButton.html  BluetoothChooserCombo.html  BluetoothClient.html  annotation-glossary.html  api-index-full.html  ch01.html  gnome-bluetooth-bluetooth-enums.html  gnome-bluetooth-bluetooth-plugin-manager.html  gnome-bluetooth-bluetooth-plugin.html  gnome-bluetooth-bluetooth-utils.html  gnome-bluetooth.devhelp2  index.html  index.sgml  object-tree.html
docs/reference/libgnome-bluetooth/tmpl/: bluetooth-chooser-button.sgml  bluetooth-chooser-combo.sgml  bluetooth-chooser.sgml  bluetooth-client.sgml  bluetooth-enums.sgml  bluetooth-plugin-manager.sgml  bluetooth-plugin.sgml  bluetooth-utils.sgml  gnome-bluetooth-enum-types.sgml  gnome-bluetooth-unused.sgml
help/: Makefile.in
lib/: Makefile.am  Makefile.in  rfkill.h
lib/plugins/: Makefile.am  Makefile.in
m4/: gnome-common.m4  gnome-compiler-flags.m4  lib-ld.m4  threadlib.m4  visibility.m4  yelp.m4
po/: POTFILES  POTFILES.skip
sendto/: Makefile.in  bluetooth-sendto.desktop
wizard/: Makefile.am  Makefile.in
